--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "module": "ESNext",
     "target": "es6",
     "allowJs": true,
+    "strict": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
